Update .gitignore to track results while excluding large model files

--- a/.gitignore
+++ b/.gitignore
@@ -35,71 +35,67 @@ venv.bak/
 .uv/
 uv.lock
 
-# Model files and checkpoints (these can be huge!)
-models/
-*.pt
-*.pth
+# Large model files (but allow small config/metadata files)
 *.bin
 *.safetensors
-checkpoints/
-checkpoint-*/
+*.pt
+*.pth
+models/*/pytorch_model.bin
+models/*/model.safetensors
 
-# Cached datasets
+# Allow model metadata and config files
+!models/*/config.json
+!models/*/tokenizer.json
+!models/*/tokenizer_config.json
+!models/*/vocab.json
+!models/*/merges.txt
+!models/*/generation_config.json
+!models/*/training_*.json
+!models/*/eval_*.json
+
+# Cached datasets (large HF cache files)
 data/cache/
 data/processed/
 *.arrow
 *.cache
 
-# Training outputs
-results/
-outputs/
+# Allow processed JSON data files (small)
+!data/*.json
+
+# Allow results but exclude large training logs
+# !results/
+!*.png
+!*.jpg
+!*.svg
+
+# Large training outputs
 runs/
-logs/
-wandb/
+wandb/offline-*
 tensorboard_logs/
+
+# Allow small result files
+!results/*.png
+!results/*.json
+!results/*.txt
+!results/*.md
 
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# PyCharm
+# IDE
 .idea/
-
-# VS Code
 .vscode/
 
-# macOS
+# OS
 .DS_Store
+Thumbs.db
+.directory
 
 # Temporary files
 *.tmp
 *.temp
 temp/
 tmp/
-
-# Large data files (optional - you might want to track small datasets)
-*.csv
-*.json
-*.txt
-data/*.txt
-data/*.csv
-data/*.json
-
-# Evaluation outputs
-evaluation_results/
-comparison_outputs/
-*.png
-*.jpg
-*.svg
-plots/
-
-# Config files with secrets/API keys
-config/secrets.py
-.env.local
-wandb_api_key.txt
-
-# OS generated files
-Thumbs.db
-.directory
 
 # IDE files
 *.swp
